# example-rust-http-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml
src/: config.rs  main.rs
