[package]
name = "example-rust-http-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
config = "0.15.11"
http-body-util = "0.1.3"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
